--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
 
         <Button
             android:id="@+id/btn1"
+            />
         <Button
             android:id="@+id/btn2"
             android:layout_marginLeft="11dp"
@@ -47,7 +48,7 @@
             android:id="@+id/btn5"
             android:layout_marginLeft="11dp"
             android:onClick="check"
-            android:backgroundTint="@color/teal_200"
+            android:backgroundTint="@color/white"
             />
         <Button
             android:id="@+id/btn6"
