--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tic tac Toe"
+        android:text="Tic tac Toe 2"
         android:layout_marginBottom="60dp"
         android:textSize="50sp"
         android:textStyle="bold"
